# cosmwasm-book

examples/03-basics/: Cargo.toml
examples/03-basics/src/: contract.rs
examples/05-cross-contract/contracts/admin/src/: contract.rs
src/: actor-model.md  wasmd-quick-start.md
src/actor-model/: actors-in-blockchain.md  contract-as-actor.md  idea.md
src/basics/: building-contract.md  events.md  execute.md  fp-types.md  funds.md  good-practices.md  multitest-intro.md  query-testing.md  query.md  rust-project.md  state.md
src/cross-contract/: design.md  fixing-admin.md  map-storage.md  working-with-time.md
