[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.1.3", features = ["staking"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
schemars = "0.8.16"
thiserror = { version = "1.0.58" }
cw-utils = "2.0.0"
cosmwasm-schema = "2.1.3"

[dev-dependencies]
cw-multi-test = "2.1.1"
